syntax = "proto3";
package xsuportal.proto.common;
option go_package = "github.com/isucon/isucon10-final/proto/common";

message DashboardRequest {
}

message DashboardResponse {
}


